--- a/red_packet_server/pom.xml
+++ b/red_packet_server/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.atguigu.redpackage</groupId>
+    <groupId>vip.yuanshuai.redpackage</groupId>
     <artifactId>red_packet_server</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -25,6 +25,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <!--SpringBoot测试依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
 
         <!--SpringBoot与Redis整合依赖-->
